--- a/libraries/obsolete/jpl/sun87.tex
+++ b/libraries/obsolete/jpl/sun87.tex
@@ -1,305 +1,45 @@
-\documentclass[twoside,11pt]{article}
+\documentclass[twoside,11pt,nolof]{starlink}
 
 % ? Specify used packages
-% \usepackage{graphicx}        %  Use this one for final production.
-% \usepackage[draft]{graphicx} %  Use this one for drafting.
 % ? End of specify used packages
 
-\pagestyle{myheadings}
+
 
 % -----------------------------------------------------------------------------
 % ? Document identification
 % Fixed part
-\newcommand{\stardoccategory}  {Starlink User Note}
-\newcommand{\stardocinitials}  {SUN}
-\newcommand{\stardocsource}    {sun\stardocnumber}
-\newcommand{\stardoccopyright}
+\stardoccategory    {Starlink User Note}
+\stardocinitials    {SUN}
+\stardocsource      {sun\stardocnumber}
+\stardoccopyright
 {Copyright \copyright\ 2000 Council for the Central Laboratory of the Research Councils}
 
 % Variable part - replace [xxx] as appropriate.
-\newcommand{\stardocnumber}    {87.6}
-\newcommand{\stardocauthors}   {P.\,T.\,Wallace \\ A.\,J.\,J.\,Broderick}
-\newcommand{\stardocdate}      {19 September 2000}
-\newcommand{\stardoctitle}     {JPL --- Solar System Ephemeris}
-\newcommand{\stardocversion}   {2.0}
-\newcommand{\stardocmanual}    {User's Manual}
-\newcommand{\stardocabstract}  {
+\stardocnumber      {87.6}
+\stardocauthors     {P.\,T.\,Wallace \\ A.\,J.\,J.\,Broderick}
+\stardocdate        {19 September 2000}
+\stardoctitle       {JPL --- Solar System Ephemeris}
+\stardocversion     {2.0}
+\stardocmanual      {User's Manual}
+\stardocabstract  {
 The JPL library and data sets provide high-accuracy predictions for
-the positions and velocities of the Sun and planets.}
+the positions and velocities of the Sun and planets.
+}
 
 % ? End of document identification
 % -----------------------------------------------------------------------------
+% ? Document specific \providecommand or \newenvironment commands.
 
-% +
-%  Name:
-%     sun.tex
-%
-%  Purpose:
-%     Template for Starlink User Note (SUN) documents.
-%     Refer to SUN/199
-%
-%  Authors:
-%     AJC: A.J.Chipperfield (Starlink, RAL)
-%     BLY: M.J.Bly (Starlink, RAL)
-%     PWD: Peter W. Draper (Starlink, Durham University)
-%
-%  History:
-%     17-JAN-1996 (AJC):
-%        Original with hypertext macros, based on MDL plain originals.
-%     16-JUN-1997 (BLY):
-%        Adapted for LaTeX2e.
-%        Added picture commands.
-%     13-AUG-1998 (PWD):
-%        Converted for use with LaTeX2HTML version 98.2 and
-%        Star2HTML version 1.3.
-%      1-FEB-2000 (AJC):
-%        Add Copyright statement in LaTeX
-%     08-DEC-2000 (BLY):
-%        This version for SUN/87, from original SUN/87.6 revision.
-%           Various format changes to allow a tidy conversion to hypertext.
-%     {Add further history here}
-%
-% -
-
-\newcommand{\stardocname}{\stardocinitials /\stardocnumber}
-\markboth{\stardocname}{\stardocname}
-\setlength{\textwidth}{160mm}
-\setlength{\textheight}{230mm}
-\setlength{\topmargin}{-2mm}
-\setlength{\oddsidemargin}{0mm}
-\setlength{\evensidemargin}{0mm}
-\setlength{\parindent}{0mm}
-\setlength{\parskip}{\medskipamount}
-\setlength{\unitlength}{1mm}
-
-% -----------------------------------------------------------------------------
-%  Hypertext definitions.
-%  ======================
-%  These are used by the LaTeX2HTML translator in conjunction with star2html.
-
-%  Comment.sty: version 2.0, 19 June 1992
-%  Selectively in/exclude pieces of text.
-%
-%  Author
-%    Victor Eijkhout                                      <eijkhout@cs.utk.edu>
-%    Department of Computer Science
-%    University Tennessee at Knoxville
-%    104 Ayres Hall
-%    Knoxville, TN 37996
-%    USA
-
-%  Do not remove the %begin{latexonly} and %end{latexonly} lines (used by
-%  LaTeX2HTML to signify text it shouldn't process).
-%begin{latexonly}
-\makeatletter
-\def\makeinnocent#1{\catcode`#1=12 }
-\def\csarg#1#2{\expandafter#1\csname#2\endcsname}
-
-\def\ThrowAwayComment#1{\begingroup
-    \def\CurrentComment{#1}%
-    \let\do\makeinnocent \dospecials
-    \makeinnocent\^^L% and whatever other special cases
-    \endlinechar`\^^M \catcode`\^^M=12 \xComment}
-{\catcode`\^^M=12 \endlinechar=-1 %
- \gdef\xComment#1^^M{\def\test{#1}
-      \csarg\ifx{PlainEnd\CurrentComment Test}\test
-          \let\html@next\endgroup
-      \else \csarg\ifx{LaLaEnd\CurrentComment Test}\test
-            \edef\html@next{\endgroup\noexpand\end{\CurrentComment}}
-      \else \let\html@next\xComment
-      \fi \fi \html@next}
-}
-\makeatother
-
-\def\includecomment
- #1{\expandafter\def\csname#1\endcsname{}%
-    \expandafter\def\csname end#1\endcsname{}}
-\def\excludecomment
- #1{\expandafter\def\csname#1\endcsname{\ThrowAwayComment{#1}}%
-    {\escapechar=-1\relax
-     \csarg\xdef{PlainEnd#1Test}{\string\\end#1}%
-     \csarg\xdef{LaLaEnd#1Test}{\string\\end\string\{#1\string\}}%
-    }}
-
-%  Define environments that ignore their contents.
-\excludecomment{comment}
-\excludecomment{rawhtml}
-\excludecomment{htmlonly}
-
-%  Hypertext commands etc. This is a condensed version of the html.sty
-%  file supplied with LaTeX2HTML by: Nikos Drakos <nikos@cbl.leeds.ac.uk> &
-%  Jelle van Zeijl <jvzeijl@isou17.estec.esa.nl>. The LaTeX2HTML documentation
-%  should be consulted about all commands (and the environments defined above)
-%  except \xref and \xlabel which are Starlink specific.
-
-\newcommand{\htmladdnormallinkfoot}[2]{#1\footnote{#2}}
-\newcommand{\htmladdnormallink}[2]{#1}
-\newcommand{\htmladdimg}[1]{}
-\newcommand{\hyperref}[4]{#2\ref{#4}#3}
-\newcommand{\htmlref}[2]{#1}
-\newcommand{\htmlimage}[1]{}
-\newcommand{\htmladdtonavigation}[1]{}
-
-\newenvironment{latexonly}{}{}
-\newcommand{\latex}[1]{#1}
-\newcommand{\html}[1]{}
-\newcommand{\latexhtml}[2]{#1}
-\newcommand{\HTMLcode}[2][]{}
-
-%  Starlink cross-references and labels.
-\newcommand{\xref}[3]{#1}
-\newcommand{\xlabel}[1]{}
-
-%  LaTeX2HTML symbol.
-\newcommand{\latextohtml}{\LaTeX2\texttt{HTML}}
-
-%  Define command to re-centre underscore for Latex and leave as normal
-%  for HTML (severe problems with \_ in tabbing environments and \_\_
-%  generally otherwise).
-\renewcommand{\_}{\texttt{\symbol{95}}}
-
-% -----------------------------------------------------------------------------
-%  Debugging.
-%  =========
-%  Remove % on the following to debug links in the HTML version using Latex.
-
-% \newcommand{\hotlink}[2]{\fbox{\begin{tabular}[t]{@{}c@{}}#1\\\hline{\footnotesize #2}\end{tabular}}}
-% \renewcommand{\htmladdnormallinkfoot}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\htmladdnormallink}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\hyperref}[4]{\hotlink{#1}{\S\ref{#4}}}
-% \renewcommand{\htmlref}[2]{\hotlink{#1}{\S\ref{#2}}}
-% \renewcommand{\xref}[3]{\hotlink{#1}{#2 -- #3}}
-%end{latexonly}
-% -----------------------------------------------------------------------------
-% ? Document specific \newcommand or \newenvironment commands.
-
-% \newcommand{\hdg}[1]{\subsection*{\underline{#1}}}
-\newcommand{\hdg}[1]{\vskip4pt plus2pt\leavevmode\kern-1em \underline{\large{#1}}\par}
-\newcommand{\latexonlysmall}{\small}
-\begin{htmlonly}
-   \newcommand{\latexonlysmall}{}
-   \newcommand{\hdg}[1]{\subsection*{{#1}}}
-\end{htmlonly}
+% \providecommand{\hdg}[1]{\subsection*{\underline{#1}}}
+\providecommand{\hdg}[1]{\vskip4pt plus2pt\leavevmode\kern-1em \underline{\large{#1}}\par}
+\providecommand{\latexonlysmall}{\small}
 
 % ? End of document specific commands
 % -----------------------------------------------------------------------------
 %  Title Page.
 %  ===========
-\renewcommand{\thepage}{\roman{page}}
 \begin{document}
-\thispagestyle{empty}
-
-%  Latex document header.
-%  ======================
-\begin{latexonly}
-   CCLRC / \textsc{Rutherford Appleton Laboratory} \hfill \textbf{\stardocname}\\
-   {\large Particle Physics \& Astronomy Research Council}\\
-   {\large Starlink Project\\}
-   {\large \stardoccategory\ \stardocnumber}
-   \begin{flushright}
-   \stardocauthors\\
-   \stardocdate
-   \end{flushright}
-   \vspace{-4mm}
-   \rule{\textwidth}{0.5mm}
-   \vspace{5mm}
-   \begin{center}
-   {\Huge\textbf{\stardoctitle \\ [2.5ex]}}
-   {\LARGE\textbf{\stardocversion \\ [4ex]}}
-   {\Huge\textbf{\stardocmanual}}
-   \end{center}
-   \vspace{5mm}
-
-% ? Add picture here if required for the LaTeX version.
-%   e.g. \includegraphics[scale=0.3]{filename.ps}
-% ? End of picture
-
-% ? Heading for abstract if used.
-   \vspace{10mm}
-   \begin{center}
-      {\Large\textbf{Abstract}}
-   \end{center}
-% ? End of heading for abstract.
-\end{latexonly}
-
-%  HTML documentation header.
-%  ==========================
-\begin{htmlonly}
-   \xlabel{}
-   \begin{rawhtml} <H1> \end{rawhtml}
-      \stardoctitle\\
-      \stardocversion\\
-      \stardocmanual
-   \begin{rawhtml} </H1> <HR> \end{rawhtml}
-
-% ? Add picture here if required for the hypertext version.
-%   e.g. \includegraphics[scale=0.7]{filename.ps}
-% ? End of picture
-
-   \begin{rawhtml} <P> <I> \end{rawhtml}
-   \stardoccategory\ \stardocnumber \\
-   \stardocauthors \\
-   \stardocdate
-   \begin{rawhtml} </I> </P> <H3> \end{rawhtml}
-      \htmladdnormallink{CCLRC / Rutherford Appleton Laboratory}
-                        {http://www.cclrc.ac.uk} \\
-      \htmladdnormallink{Particle Physics \& Astronomy Research Council}
-                        {http://www.pparc.ac.uk} \\
-   \begin{rawhtml} </H3> <H2> \end{rawhtml}
-      \htmladdnormallink{Starlink Project}{http://www.starlink.ac.uk/}
-   \begin{rawhtml} </H2> \end{rawhtml}
-   \htmladdnormallink{\htmladdimg{source.gif} Retrieve hardcopy}
-      {http://www.starlink.ac.uk/cgi-bin/hcserver?\stardocsource}\\
-
-%  HTML document table of contents.
-%  ================================
-%  Add table of contents header and a navigation button to return to this
-%  point in the document (this should always go before the abstract \section).
-  \label{stardoccontents}
-  \begin{rawhtml}
-    <HR>
-    <H2>Contents</H2>
-  \end{rawhtml}
-  \htmladdtonavigation{\htmlref{\htmladdimg{contents_motif.gif}}
-        {stardoccontents}}
-
-% ? New section for abstract if used.
-  \section{\xlabel{abstract}Abstract}
-% ? End of new section for abstract
-\end{htmlonly}
-
-% -----------------------------------------------------------------------------
-% ? Document Abstract. (if used)
-%  ==================
-\stardocabstract
-% ? End of document abstract
-
-% -----------------------------------------------------------------------------
-% ? Latex Copyright Statement
-%  =========================
-\begin{latexonly}
-\newpage
-\vspace*{\fill}
-\stardoccopyright
-\end{latexonly}
-% ? End of Latex copyright statement
-
-% -----------------------------------------------------------------------------
-% ? Latex document Table of Contents (if used).
-%  ===========================================
-  \newpage
-  \begin{latexonly}
-    \setlength{\parskip}{0mm}
-    \tableofcontents
-    \setlength{\parskip}{\medskipamount}
-    \markboth{\stardocname}{\stardocname}
-  \end{latexonly}
-% ? End of Latex document table of contents
-% -----------------------------------------------------------------------------
-
-\cleardoublepage
-\renewcommand{\thepage}{\arabic{page}}
-\setcounter{page}{1}
+\scfrontmatter
 
 % ? Main text
 
@@ -372,31 +112,27 @@ respect to the Solar System Barycentre, at JD~2439105.7117 (TDB):
 
 \begin{enumerate}
 \item Write a Fortran program which includes the statements:
-\begin{quote}
-\begin{verbatim}
+\begin{small}
+\begin{terminalv}
 DOUBLE PRECISION PV(6)
 LOGICAL OK
    :
 CALL PLEPH( 39105.2117D0, 3, 12, PV, OK )
-\end{verbatim}
-\end{quote}
+\end{terminalv}
+\end{small}
 
 Details of the PLEPH arguments are given
 \latexhtml{in Section~\ref{the_pleph_subroutine}.}%
 {in the section \htmlref{`The PLEPH Subroutine}{the_pleph_subroutine}.}
 
 \item Compile and link.
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 f77 myprog.f -L/star/lib `jpl_link` -o myprog
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 \item Specify the ephemeris file:
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 ln -s /star/etc/jpl/jpleph.dat JPLEPH
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 \item Run the program.
 
 \end{enumerate}
@@ -465,9 +201,9 @@ usually the position and velocity
 of one body relative to another --
 from the JPL ephemeris file on disc.
 The call is:
-\begin{verbatim}
-      CALL PLEPH (TDB, NP, NC, R, OK)
-\end{verbatim}
+\begin{terminalv}
+CALL PLEPH (TDB, NP, NC, R, OK)
+\end{terminalv}
 with arguments as follows:
 
 \begin{description}
@@ -526,26 +262,22 @@ For example, the following call will obtain the position and velocity of the
 Earth relative to the Solar System barycentre at 0 hours TDB on
 30th~April~1986:
 
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 CALL PLEPH ( 46550D0, 3, 12, R, OK )
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 
 PLEPH can return results in either AU and AU/day or km and km/sec.
 The default is AU and AU/day; to select the other units, include the
 following Fortran statements:
 
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 LOGICAL KM
 COMMON /STCOMM/ KM
 SAVE STCOMM
    :
    :
 KM=.TRUE.
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 
 Calls to PLEPH will then return results in km and km/sec.
 
@@ -567,11 +299,9 @@ determined at once.
 
 The call is:
 
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 CALL STATE (JD, LIST, PV, NUT, OK)
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 
 with arguments as follows:
 
@@ -672,11 +402,9 @@ a particular JPL ephemeris -- planetary masses, conversion factors,
 range of dates covered, \emph{etc.}\ -- this can be done by means of
 the subroutine CONST.  The call is as follows:
 
-\begin{quote}
-\begin{verbatim}
-      CALL CONST (NAM, VAL, SSS, N)
-\end{verbatim}
-\end{quote}
+\begin{terminalv}
+CALL CONST (NAM, VAL, SSS, N)
+\end{terminalv}
 
 and returns the following:
 
@@ -715,13 +443,11 @@ rather than sequential.
 
 To run SHORTEPH under Unix:
 
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 % ln -s /star/etc/jpl/jpleph.dat JPLEPH
 % ln -s jplephs.dat JPLEPHS
 % /star/etc/jpl/shorteph
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 
 to produce the short ephemeris file \texttt{jplephs.dat}.
 
@@ -744,13 +470,11 @@ there is normally no need for users to repeat the test.  However, for
 reassurance that the ephemeris is functioning correctly, TESTEPH may be
 run as follows.  Under Unix:
 
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 % ln -s /star/etc/jpl/jpleph.dat JPLEPH
 % ln -s /star/etc/jpl/testephinput.dat TESTEPHINPUT
 % /star/etc/jpl/testeph
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 
 On some platforms all the results pass the test, while on others a
 handful of results lie just outside the tolerance:  it depends on the
@@ -874,34 +598,31 @@ The executable program JPLPLEPH interpolates the ephemeris for a
 particular (hardwired) epoch, to demonstrate the use of the subroutine
 PLEPH. Under Unix, it can be run as follows:
 
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 % ln -s /star/etc/jpl/jpleph.dat JPLEPH
 % /star/etc/jpl/jplpleph
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 
 JPLPLEPH calls the subroutine PLEPH to interpolate from the ephemeris
 file the heliocentric position and velocity of the Earth for the instant
 TDB~=~2451624.5.  It produces the following output (depending on machine
 precision):
 
-\begin{quote}
-\begin{verbatim}
+\begin{small}
+\begin{terminalv}
 -0.9960816789895932E+00
 -0.1092611522464465E-01
 -0.4738690663777706E-02
 -0.7521474026186866E-04
 -0.1583616804758534E-01
 -0.6866074103775283E-02
-\end{verbatim}
-\end{quote}
+\end{terminalv}
+\end{small}
 
 The Fortran source of JPLPLEPH follows.
 
-\begin{quote}
-\latexonlysmall
-\begin{verbatim}
+\begin{small}
+\begin{terminalv}
       PROGRAM JPLPLEPH
 *+
 *  - - - - - - - - -
@@ -943,8 +664,8 @@ The Fortran source of JPLPLEPH follows.
       IF (OK) WRITE (*,'(6(1X,E24.16/))') PV
 
       END
-\end{verbatim}
-\end{quote}
+\end{terminalv}
+\end{small}
 
 \subsection{\xlabel{example_using_state}Example using STATE}
 \label{example_using_state}
@@ -953,34 +674,29 @@ The program JPLSTATE interpolates the ephemeris for a particular
 (hardwired) epoch, to demonstrate the use of the subroutine STATE.
 Under Unix, it can be run as follows:
 
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 % ln -s /star/etc/jpl/jpleph.dat JPLEPH
 %/star/etc/jpl/jplstate
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 
 JPLSTATE calls the subroutine STATE to interpolate from the ephemeris file
 the heliocentric position and velocity of the Earth-Moon Barycentre for
 the instant TDB~=~2451624.5. The following output is produced (depending
 on machine precision):
 
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 -0.9961121408482240E+00
 -0.1093240728275330E-01
 -0.4738623145919944E-02
 -0.7419740229401869E-04
 -0.1584284216910741E-01
 -0.6868683708183170E-02
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 
 The Fortran source for JPLSTATE follows:
 
-\begin{quote}
-\latexonlysmall
-\begin{verbatim}
+\begin{small}
+\begin{terminalv}
       PROGRAM JPLSTATE
 *+
 *  - - - - - - - - -
@@ -1031,8 +747,8 @@ The Fortran source for JPLSTATE follows:
 
       END
 
-\end{verbatim}
-\end{quote}
+\end{terminalv}
+\end{small}
 
 \subsection{\xlabel{example_using_const}Example using CONST}
 \label{example_using_const}
@@ -1040,12 +756,10 @@ The Fortran source for JPLSTATE follows:
 The program JPLCONST demonstrates the use of the CONST subroutine to obtain the
 constants of the ephemeris.  Under Unix, it can be run as follows:
 
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 % ln -s /star/etc/jpl/jpleph.dat JPLEPH
 % /star/etc/jpl/jplconst
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 
 JPLCONST calls the CONST subroutine and then
 lists all the constants of the ephemeris.  (The listing is too long
@@ -1054,9 +768,8 @@ See also the Fortran source of the PLEPH subroutine, which shows
 how the data output by CONST can be searched for named constants.
 The Fortran source of JPLCONST follows.
 
-\begin{quote}
-\latexonlysmall
-\begin{verbatim}
+\begin{small}
+\begin{terminalv}
       PROGRAM JPLCONST
 *+
 *  - - - - - - - - -
@@ -1097,8 +810,8 @@ The Fortran source of JPLCONST follows.
       END DO
 
       END
-\end{verbatim}
-\end{quote}
+\end{terminalv}
+\end{small}
 
 \newpage
 
@@ -1121,9 +834,9 @@ subroutines.
 % \hsize=6.5truein\vsize=8.9truein                      % Starlink
 % \hoffset=.0truein\voffset=.7truein                    % Starlink
 
-\setlength{\parindent}{0pt}
-\setlength{\parskip}{8pt}
-\setlength{\baselineskip}{11pt}
+%\setlength{\parindent}{0pt}
+%\setlength{\parskip}{8pt}
+%\setlength{\baselineskip}{11pt}
 
 % \baselineskip=11.pt plus.5pt minus.5pt
 % \lineskiplimit=1pt
@@ -1141,9 +854,7 @@ subroutines.
 % \def\ul#1{$\underline{\hbox{\sl\strut#1}}$}
 % \def\hdg#1{\vskip4pt plus2pt\leavevmode\kern-1em \ul{#1}\par}
 
-\begin{center}
 \section*{The JPL Export Planetary Ephemeris}
-\end{center}
 
 \hdg{Introduction}
 
@@ -1173,7 +884,7 @@ whatever, and (2) the resulting files are written on disk as
 direct-access files, yielding considerably improved read-access time.
 Because of these changes,
 the revised software structure and ephemeris
-file formats described in this document are {\it not\/} compatible
+file formats described in this document are \textit{not\/} compatible
 with the earlier formats and cannot be used with them.
 Anyone wishing to use future versions of the JPL ephemerides
 will have to adapt his software to use the routines described
@@ -1236,7 +947,7 @@ Link the main program \textsc{ephdsk} with the subroutines \textsc{ctoj, ephopn,
 jtoc, rci}, and \textsc{comdat}. The program expects to read the tape on a
 file having the logical name \textsc{ephtap} and will write the output on the
 logical file \textsc{jpleph}. (These names are logical names, in that there
-are no terminal periods in the Fortran {\tt OPEN} statements; the user
+are no terminal periods in the Fortran \texttt{OPEN} statements; the user
 may wish to assign them \emph{via} operating system control
 statements to files whose actual names are different.)
 
@@ -1248,8 +959,8 @@ block size is 1920 bytes (unless stated otherwise in the export
 cover letter).
 
 Run the program.  You will be prompted for two inputs.  The first is for
-a character specifying the format of file~2 ({\tt A} for \textsc{ascii}
-or {\tt B} for Binary). The format of your file is stated in the export
+a character specifying the format of file~2 (\texttt{A} for \textsc{ascii}
+or \texttt{B} for Binary). The format of your file is stated in the export
 cover letter.
 
 The second prompt is for an optional shortened time span of the output
@@ -1259,15 +970,15 @@ integer calendar date limits, in the form
 
 % Starlink mods
 % \vp
-% \+&{\tt YYYYMMDD{\rm,}YYYYMMDD}\cr
-\begin{verbatim}
+% \+&\texttt{YYYYMMDD{\rm,}YYYYMMDD}\cr
+\begin{terminalv}
         YYYYMMDD,YYYYMMDD
-\end{verbatim}
+\end{terminalv}
 % End of Starlink mods
 
 If you wish to retain either the original starting or ending epoch,
 enter a 0 in the desired field. To retain the full span
-of the input file, enter only a {\tt <return>}.
+of the input file, enter only a \texttt{<return>}.
 
 On some smaller computers this file-creation
 step can be time-consuming, requiring possibly five minutes or
@@ -1292,18 +1003,17 @@ Fortran deck. They are bounded by the initial and terminal
 comment cards of the form
 % Starlink mods
 % \vp
-% \+&{\tt Test~output~from~JPL~PLANETARY~EPHEMERIS:~DE-xxx~+~LE-xxx}\cr
+% \+&\texttt{Test~output~from~JPL~PLANETARY~EPHEMERIS:~DE-xxx~+~LE-xxx}\cr
 % \+&{$\cdots$}\cr
-% \+&{\tt End~of~Test~output~from~JPL~PLANETARY~EPHEMERIS:~DE-xxx~+~LE-xxx}\cr
-\begin{verbatim}
+% \+&\texttt{End~of~Test~output~from~JPL~PLANETARY~EPHEMERIS:~DE-xxx~+~LE-xxx}\cr
+\begin{terminalv}
         Test output from JPL PLANETARY EPHEMERIS: DE-xxx + LE-xxx
         ...
         End of Test output from JPL PLANETARY EPHEMERIS: DE-xxx + LE-xxx
-\end{verbatim}
+\end{terminalv}
 % End of Starlink mods
 
-There are approximately 600 cards in the test deck. The entire deck, {\it
-including the two comment cards}, must be copied to the  logical file
+There are approximately 600 cards in the test deck. The entire deck, \textit{including the two comment cards}, must be copied to the  logical file
 \textsc{testephinput} before \textsc{testeph} is run. The program compares
 the names and values of all constants on the file with the
 corresponding quantities produced by the originating software at
@@ -1316,11 +1026,11 @@ double-precision numbers, comparison in some cases will
 not be exact but will match only to within a fractional tolerance.
 That tolerance
 is pre-coded as $10~{-15}$ in the \textsc{testeph} variable
-{\tt CFRAC}. Any comparison exceeding this value will be
+\texttt{CFRAC}. Any comparison exceeding this value will be
 printed on the output medium.
 
 The interpolation times in the test deck are evenly spaced
-and cover the full range of the {\it original\/} export file sent from JPL.
+and cover the full range of the \textit{original\/} export file sent from JPL.
 If you elected to shorten the ephemeris using the optional calendar
 date inputs described above, \textsc{testeph}
 will ignore points lying outside
@@ -1384,12 +1094,12 @@ or \textsc{pleph}:
 %
 %\rm
 
-\begin{verbatim}
+\begin{terminalv}
         LOGICAL KM
         COMMON/STCOMM/KM
         ...
         KM=.TRUE.
-\end{verbatim}
+\end{terminalv}
 % End of Starlink mods
 
 The default units for nutations are radians and radians/day. If
@@ -1432,10 +1142,10 @@ You will be asked for new starting and ending integer
 calendar date limits, in the form
 % Starlink mods
 %\vp
-%\+&{\tt YYYYMMDD{\rm,}YYYYMMDD}\cr
-\begin{verbatim}
+%\+&\texttt{YYYYMMDD{\rm,}YYYYMMDD}\cr
+\begin{terminalv}
         YYYYMMDD,YYYYMMDD
-\end{verbatim}
+\end{terminalv}
 % End of Starlink mods
 If you wish to retain either the original starting or ending epoch,
 enter a 0 in the desired field.
@@ -1514,14 +1224,11 @@ Pasadena, CA\ \ 91109-8099     & Pasadena, CA\ \ 91109-8099 \\
 % \def\hdg#1{\vskip4pt\leavevmode\kern-1em \ul{#1}\par}
 % \pageno=6                                             % Starlink
 
-\begin{center}
 \section*{Table 2. PLEPH Calling Sequence}
-\end{center}
 
 % \vskip8pt
 % Starlink mods
-%{\tt
-%C++++++++++++++++++++++++++\el
+%\texttt{%C++++++++++++++++++++++++++\el
 %C\el
 %\phantom{C}~~~~~SUBROUTINE~PLEPH(JD,TARG,CENT,RRD,*)\el
 %C\el
@@ -1573,7 +1280,7 @@ Pasadena, CA\ \ 91109-8099     & Pasadena, CA\ \ 91109-8099 \\
 %C~~~~~~~~~~~~OR~REQUEST~FOR~NUTATIONS~OR~LIBRATIONS~WHEN~NOT~ON~FILE).
 %}
 
-\begin{verbatim}
+\begin{terminalv}
 C++++++++++++++++++++++++++
 C
       SUBROUTINE PLEPH(JD,TARG,CENT,RRD,*)
@@ -1624,7 +1331,7 @@ C                  RATES.)
 C
 C        * = STATEMENT \# IN CASE OF ERROR RETURN (EPOCH OUT OF RANGE
 C            OR REQUEST FOR NUTATIONS OR LIBRATIONS WHEN NOT ON FILE).
-\end{verbatim}
+\end{terminalv}
 
 % \bye
 % End of Starlink mods
@@ -1652,14 +1359,11 @@ C            OR REQUEST FOR NUTATIONS OR LIBRATIONS WHEN NOT ON FILE).
 % \def\hdg#1{\vskip4pt\leavevmode\kern-1em \ul{#1}\par}
 % \pageno=7
 
-\begin{center}
 \section*{Table 3. CONST Calling Sequence}
-\end{center}
 
 % \vskip8pt
 % Starlink mods
-%{\tt
-%C+++++++++++++++++++++++++++++\el
+%\texttt{%C+++++++++++++++++++++++++++++\el
 %C\el
 %\phantom{C}~~~~~SUBROUTINE~CONST(NAM,VAL,SSS,N)\el
 %C\el
@@ -1682,7 +1386,7 @@ C            OR REQUEST FOR NUTATIONS OR LIBRATIONS WHEN NOT ON FILE).
 %C~~~~~VALUE~400~IS~A~SAFE~UPPER~LIMIT~FOR~THIS~DIMENSION.
 %}
 
-\begin{verbatim}
+\begin{terminalv}
 C+++++++++++++++++++++++++++++
 C
       SUBROUTINE CONST(NAM,VAL,SSS,N)
@@ -1704,7 +1408,7 @@ C
 C     THE ARRAYS 'NAM' AND 'VAL' MUST HAVE SUFFICIENTLY LARGE
 C     DIMESNIONS TO ACCOMMODATE ALL ENTRIES ON THE FILE. THE
 C     VALUE 400 IS A SAFE UPPER LIMIT FOR THIS DIMENSION.
-\end{verbatim}
+\end{terminalv}
 
 % \bye
 % End of Starlink mods
@@ -1732,14 +1436,12 @@ C     VALUE 400 IS A SAFE UPPER LIMIT FOR THIS DIMENSION.
 % \def\hdg#1{\vskip4pt\leavevmode\kern-1em \ul{#1}\par}
 % \pageno=8                                             Starlink
 
-\begin{center}
 \section*{Table 4. Comments on Software Use}
-\end{center}
 
 \hdg{File Sizes}
 
-According to ANSI standard Fortran, the {\tt RECL} parameter in the
-Fortran {\tt OPEN} statement for direct-access
+According to ANSI standard Fortran, the \texttt{RECL} parameter in the
+Fortran \texttt{OPEN} statement for direct-access
 unformatted files defines the size of each record in 4-byte words.
 The software included in this package follows that standard.
 However, some Fortran compilers (notably those from IBM
@@ -1748,8 +1450,7 @@ byte count. If that is the case with your system, then you will have
 to make a single change to the subroutine \textsc{ephopn}.
 The affected part is self-explanatory and is reproduced here:
 % Starlink mods
-%{\tt
-%\vp
+%\texttt{%\vp
 %\settabs 24 \columns
 %\+&C~~~~~~~THE~FOLLOWING~STATEMENTS~DEFINE~THE~LENGTH~OF~THE~RECORDS\cr
 %\+&C~~~~~~~IN~THE~DIRECT-ACCESS~FILE.~IF~THE~'RECL'~SPECIFICATION~IN\cr
@@ -1760,7 +1461,7 @@ The affected part is self-explanatory and is reproduced here:
 %\+&C\cr
 %\+&~~~~~~IRECSZ=IBSZ\cr
 %\+&C~~~~~IRECSZ=IRECSZ*4\cr}
-\begin{verbatim}
+\begin{terminalv}
         C       THE FOLLOWING STATEMENTS DEFINE THE LENGTH OF THE RECORDS
         C       IN THE DIRECT-ACCESS FILE. IF THE 'RECL' SPECIFICATION IN
         C       THE FORTRAN COMPILER ON YOUR MACHINE EXPECTS THE LENGTH TO
@@ -1770,25 +1471,24 @@ The affected part is self-explanatory and is reproduced here:
         C
               IRECSZ=IBSZ
         C     IRECSZ=IRECSZ*4
-\end{verbatim}
+\end{terminalv}
 % End of Starlink mods
 
 \hdg{VAX Operation}
 
 If you wish to read a binary-format tape on a VAX, you will want to
-make a change to the program \textsc{ephdsk}. The {\tt OPEN} statement
+make a change to the program \textsc{ephdsk}. The \texttt{OPEN} statement
 for the binary tape is:
 % Starlink mods
 %\vp
-%{\tt
-%\+&C~~~~~~~~~~~~~~~~~~~~~~~~'OPEN'~STATEMENT~FOR~BINARY-FORMAT~TAPE\cr
+%\texttt{%\+&C~~~~~~~~~~~~~~~~~~~~~~~~'OPEN'~STATEMENT~FOR~BINARY-FORMAT~TAPE\cr
 %\+&~~~~~~~~OPEN(9,\cr
 %\+&~~~~~*~~~~~~~FILE='EPHTAP',\cr
 %\+&~~~~~*~~~~~~~ACCESS='SEQUENTIAL',\cr
 %\+&~~~~~*~~~~~~~FORM='UNFORMATTED',\cr
 %\+&C~~~~*~~~~~~~RECORDTYPE='VARIABLE',~!~REMOVE~'C'~IN~COL~1~FOR~VAX~I/O\cr
 %\+&~~~~~*~~~~~~~STATUS='OLD')\cr}
-\begin{verbatim}
+\begin{terminalv}
    C                        'OPEN' STATEMENT FOR BINARY-FORMAT TAPE
            OPEN(9,
         *       FILE='EPHTAP',
@@ -1796,31 +1496,29 @@ for the binary tape is:
         *       FORM='UNFORMATTED',
    C    *       RECORDTYPE='VARIABLE', ! REMOVE 'C' IN COL 1 FOR VAX I/O
         *       STATUS='OLD')
-\end{verbatim}
+\end{terminalv}
 % End of Starlink mods
-Remove the {\tt C} as indicated in the listing.
+Remove the \texttt{C} as indicated in the listing.
 
 The relevant statements used in conjunction with the program are:
 % Starlink mods
 % \vp
-% {\tt
-% \+&\$~ALLOCATE \char123 tape unit\char125 :\cr
+% \texttt{% \+&\$~ALLOCATE \char123 tape unit\char125 :\cr
 % \+&\$~MOUNT/FOREIGN/DEN=$\cdots$/BLOCKSIZE=8192
 % \char123 tape unit\char125 :\cr
 % \+&\$~DEFINE EPHTAP \char123 tape unit\char125 :\cr}
 % \vp
-% {\tt
-% \+&\$~ALLOCATE \char123 tape unit\char125 :\cr
+% \texttt{% \+&\$~ALLOCATE \char123 tape unit\char125 :\cr
 % \+&\$~MOUNT/FOREIGN/DEN=$\cdots$/BLOCKSIZE=8192
 % \char123 tape unit\char125 :\cr
 % \+&\$~DEFINE EPHTAP \char123 tape unit\char125 :\cr}
-\begin{verbatim}
+\begin{terminalv}
 $ ALLOCATE {tape unit}:
 $ MOUNT/FOREIGN/DEN=.../BLOCKSIZE=8192 {tape unit}:
 $ DEFINE EPHTAP {tape unit}:
-\end{verbatim}
+\end{terminalv}
 % End of Starlink mods
-where the dots following the {\tt DEN} specification denote the correct
+where the dots following the \texttt{DEN} specification denote the correct
 density for your tape.
 % \bye                                                 Starlink
 
